<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <android.support.v7.widget.CardView
            android:id="@+id/cw_Weather_card"
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            app:cardElevation="1dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tw_Details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/label_more_details"
                    android:layout_alignParentRight="true" />

                <TextView
                    android:id="@+id/lbl_Date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/label_date"
                    android:layout_alignParentLeft="true" />

                <TextView
                    android:id="@+id/lbl_Temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/label_temp" />

                <TextView
                    android:id="@+id/tw_Date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/lbl_Date"
                    android:text="TextView" />

                <TextView
                    android:id="@+id/tw_Temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@id/lbl_Temp"
                    android:text="TextView" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </RelativeLayout>
</LinearLayout>